--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 <body>
   <div class="stadium">
     <header class="banner">
-  <div class="crest-wrap">
-    <img src="sudan-ball.png" alt="Sudan Football Crest" class="crest" />
-  </div>
-  <h1>ASV 22/10 9:30pm</h1>
-</header>
+      <div class="crest-wrap">
+        <img src="sudan-ball.png" alt="Sudan Football Crest" class="crest" />
+      </div>
+      <div class="match-info">
+        <h1>ASV 22/10 9:30pm</h1>
+      </div>
+    </header>
 
     <main class="board">
       <section class="glass table">
@@ -37,13 +39,13 @@
         <div class="bench">
           <div class="bench-title">احتياط</div>
           <div class="bench-box red">حافظ</div>
-          
           <div class="bench-box yellow"></div>
         </div>
 
         <div class="bench">
           <div class="bench-title">الفنايل</div>
           <div class="bench-box red">حردلو</div>
+          <div class="bench-box yellow"></div>
         </div>
       </section>
     </main>
