--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>العزله</title>
+  <title>لوحة التمرين</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;800&display=swap" rel="stylesheet">
@@ -12,13 +12,11 @@
 <body>
   <div class="stadium">
     <header class="banner">
-      <div class="crest-wrap">
-        <img src="sudan-ball.png" alt="Sudan Football Crest" class="crest" />
-      </div>
-      <div class="match-info">
-        <h1>ASV 22/10 9:30pm</h1>
-      </div>
-    </header>
+  <div class="crest-wrap">
+    <img src="sudan-ball.png" alt="Sudan Football Crest" class="crest" />
+  </div>
+  <h1>ASV 22/10 9:30pm</h1>
+</header>
 
     <main class="board">
       <section class="glass table">
@@ -39,7 +37,13 @@
         <div class="bench">
           <div class="bench-title">احتياط</div>
           <div class="bench-box red">حافظ</div>
+          
           <div class="bench-box yellow"></div>
+        </div>
+
+        <div class="bench">
+          <div class="bench-title">الفنايل</div>
+          <div class="bench-box red">حردلو</div>
         </div>
       </section>
     </main>
