--- a/index.html
+++ b/index.html
@@ -141,10 +141,9 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-number">10</span>
+                <span class="bench-name">حافظ</span>
               </div>
               <div class="bench-player">
-                <span class="bench-number">10</span>
                 <span class="bench-name">حافظ</span>
               </div>
             </div>
