--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>تشكيلة التمرين - ASV</title>
+  <title>تشكيلة التمرين </title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
@@ -20,10 +20,10 @@
             <img src="sudan-ball.png" alt="Sudan Football" />
           </div>
           <div class="match-info">
-            <h1 class="match-title">ASV</h1>
+            <h1 class="match-title">Goals</h1>
             <div class="match-details">
-              <span class="date">22/10</span>
-              <span class="time">9:30 PM</span>
+              <span class="time"> 1:00 PM</span>
+              <span class="date">Sun 26/10</span>
             </div>
           </div>
         </div>
