--- a/index.html
+++ b/index.html
@@ -45,38 +45,34 @@
           <div class="players-grid">
             <div class="player-card">
               <div class="player-number">1</div>
-              <div class="player-name">جوهر</div>
+              <div class="player-name">وائل</div>
             </div>
             <div class="player-card">
               <div class="player-number">2</div>
-              <div class="player-name">سليمان</div>
+              <div class="player-name">رياني</div>
             </div>
             <div class="player-card">
               <div class="player-number">3</div>
-              <div class="player-name">عصام</div>
+              <div class="player-name">التجاني</div>
             </div>
             <div class="player-card">
               <div class="player-number">4</div>
-              <div class="player-name">جرافي</div>
+              <div class="player-name">اواب</div>
             </div>
             <div class="player-card">
               <div class="player-number">5</div>
-              <div class="player-name">خالد</div>
+              <div class="player-name">جوهر</div>
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">محمد التجاني</div>
+              <div class="player-name">وادفور</div>
             </div>
             <div class="player-card">
               <div class="player-number">7</div>
-              <div class="player-name">فيصل</div>
+              <div class="player-name">عباده</div>
             </div>
             <div class="player-card">
               <div class="player-number">8</div>
-              <div class="player-name">ابوالقاسم</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">9</div>
               <div class="player-name">رزقه\ احمد</div>
             </div>
           </div>
@@ -93,38 +89,34 @@
           <div class="players-grid">
             <div class="player-card">
               <div class="player-number">1</div>
-              <div class="player-name">سلمان</div>
+              <div class="player-name">خالد</div>
             </div>
             <div class="player-card">
               <div class="player-number">2</div>
-              <div class="player-name">وائل</div>
+              <div class="player-name">حسام</div>
             </div>
             <div class="player-card">
               <div class="player-number">3</div>
-              <div class="player-name">حردلو</div>
+              <div class="player-name">ابو القاسم</div>
             </div>
             <div class="player-card">
               <div class="player-number">4</div>
-              <div class="player-name">ابراهيم</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">5</div>
-              <div class="player-name">اواب</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">6</div>
-              <div class="player-name">احمد عبدالله</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">7</div>
-              <div class="player-name">ابن بطوطة</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">8</div>
               <div class="player-name">عثمان</div>
             </div>
             <div class="player-card">
-              <div class="player-number">9</div>
+              <div class="player-number">5</div>
+              <div class="player-name">حردلو</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">6</div>
+              <div class="player-name">انور</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">7</div>
+              <div class="player-name">سلمان</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">8</div>
               <div class="player-name">رزقه\ احمد</div>
             </div>
           </div>
@@ -141,10 +133,10 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">حافظ</span>
+                <span class="bench-name">جرافي</span>
               </div>
               <div class="bench-player">
-                <span class="bench-name">حافظ</span>
+                <span class="bench-name">عصام</span>
               </div>
             </div>
           </div>
@@ -156,7 +148,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">حردلو</span>
+                <span class="bench-name">احمد بشير</span>
               </div>
             </div>
           </div>
