--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <img src="sudan-ball.png" alt="Sudan Football" />
           </div>
           <div class="match-info">
-            <h1 class="match-title">Goals</h1>
+            <h1 class="match-title">Strikers</h1>
             <div class="match-details">
-              <span class="time"> 1:00 PM</span>
+              <span class="time"> 12:40 - 02:30 PM</span>
               <span class="date">Sun 26/10</span>
             </div>
           </div>
@@ -49,36 +49,28 @@
             </div>
             <div class="player-card">
               <div class="player-number">2</div>
-              <div class="player-name">رياني</div>
+              <div class="player-name">عثمان</div>
             </div>
             <div class="player-card">
               <div class="player-number">3</div>
-              <div class="player-name">التجاني</div>
+              <div class="player-name">ابو القاسم</div>
             </div>
             <div class="player-card">
               <div class="player-number">4</div>
-              <div class="player-name">اواب</div>
+              <div class="player-name">عصام</div>
             </div>
             <div class="player-card">
               <div class="player-number">5</div>
-              <div class="player-name">جوهر</div>
+              <div class="player-name">جرافي</div>
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">وادفور</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">7</div>
-              <div class="player-name">عباده</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">8</div>
-              <div class="player-name">رزقه\ احمد</div>
+              <div class="player-name">رزقه احمد عباده</div>
             </div>
           </div>
         </div>
 
-        <!-- Red Team (Right) -->
+        <!-- Red Team (Center) -->
         <div class="team-card red-team">
           <div class="team-header">
             <div class="team-icon">
@@ -89,35 +81,63 @@
           <div class="players-grid">
             <div class="player-card">
               <div class="player-number">1</div>
-              <div class="player-name">خالد</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">2</div>
               <div class="player-name">حسام</div>
             </div>
             <div class="player-card">
+              <div class="player-number">2</div>
+              <div class="player-name">اواب</div>
+            </div>
+            <div class="player-card">
               <div class="player-number">3</div>
-              <div class="player-name">ابو القاسم</div>
+              <div class="player-name">التجاني</div>
             </div>
             <div class="player-card">
               <div class="player-number">4</div>
-              <div class="player-name">عثمان</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">5</div>
               <div class="player-name">حردلو</div>
             </div>
             <div class="player-card">
-              <div class="player-number">6</div>
-              <div class="player-name">انور</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">7</div>
+              <div class="player-number">5</div>
               <div class="player-name">سلمان</div>
             </div>
             <div class="player-card">
-              <div class="player-number">8</div>
-              <div class="player-name">رزقه\ احمد</div>
+              <div class="player-number">6</div>
+              <div class="player-name">رزقه احمد عباده</div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Blue Team (Right) -->
+        <div class="team-card blue-team">
+          <div class="team-header">
+            <div class="team-icon">
+              <i class="fas fa-shield-alt"></i>
+            </div>
+            <h2 class="team-name">الفريق الأزرق</h2>
+          </div>
+          <div class="players-grid">
+            <div class="player-card">
+              <div class="player-number">1</div>
+              <div class="player-name">رياني</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">2</div>
+              <div class="player-name">خالد</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">3</div>
+              <div class="player-name">انور</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">4</div>
+              <div class="player-name">جوهر</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">5</div>
+              <div class="player-name">وادفور</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">6</div>
+              <div class="player-name">رزقه احمد عباده</div>
             </div>
           </div>
         </div>
@@ -125,22 +145,7 @@
 
       <!-- Bench Section -->
       <section class="bench-section">
-        <div class="bench-container">
-          <div class="bench-card">
-            <div class="bench-header">
-              <i class="fas fa-users"></i>
-              <h3>احتياط</h3>
-            </div>
-            <div class="bench-players">
-              <div class="bench-player">
-                <span class="bench-name">جرافي</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">عصام</span>
-              </div>
-            </div>
-          </div>
-
+        
           <div class="bench-card">
             <div class="bench-header">
               <i class="fas fa-tshirt"></i>
