--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">رزقه احمد عباده</div>
+              <div class="player-name">رزقه/ احمد/ عباده</div>
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">رزقه احمد عباده</div>
+              <div class="player-name">رزقه/ احمد/ عباده</div>
             </div>
           </div>
         </div>
@@ -137,7 +137,7 @@
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">رزقه احمد عباده</div>
+              <div class="player-name">رزقه/ احمد/ عباده</div>
             </div>
           </div>
         </div>
