--- a/index.html
+++ b/index.html
@@ -145,7 +145,21 @@
 
       <!-- Bench Section -->
       <section class="bench-section">
-        
+        <div class="bench-container">
+          <div class="bench-card">
+            <div class="bench-header">
+              <i class="fas fa-users"></i>
+              <h3>احتياط</h3>
+            </div>
+            <div class="bench-players">
+              <div class="bench-player">
+                <span class="bench-name"></span>
+              </div>
+              <div class="bench-player">
+                <span class="bench-name"></span>
+              </div>
+            </div>
+          </div>
           <div class="bench-card">
             <div class="bench-header">
               <i class="fas fa-tshirt"></i>
