--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <img src="sudan-ball.png" alt="Sudan Football" />
           </div>
           <div class="match-info">
-            <h1 class="match-title">Strikers</h1>
+            <h1 class="match-title">Goals</h1>
             <div class="match-details">
-              <span class="time"> 12:40 - 02:30 PM</span>
+              <span class="time"> 1:00 PM</span>
               <span class="date">Sun 26/10</span>
             </div>
           </div>
@@ -45,32 +45,32 @@
           <div class="players-grid">
             <div class="player-card">
               <div class="player-number">1</div>
-              <div class="player-name">وائل</div>
+              <div class="player-name">رياني</div>
             </div>
             <div class="player-card">
               <div class="player-number">2</div>
-              <div class="player-name">عثمان</div>
+              <div class="player-name">اواب</div>
             </div>
             <div class="player-card">
               <div class="player-number">3</div>
-              <div class="player-name">ابو القاسم</div>
+              <div class="player-name">الحردلو</div>
             </div>
             <div class="player-card">
               <div class="player-number">4</div>
-              <div class="player-name">عصام</div>
+              <div class="player-name">انور</div>
             </div>
             <div class="player-card">
               <div class="player-number">5</div>
-              <div class="player-name">جرافي</div>
+              <div class="player-name">عباده</div>
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">رزقه/ احمد/ عباده</div>
+              <div class="player-name">احمد</div>
             </div>
           </div>
         </div>
 
-        <!-- Red Team (Center) -->
+        <!-- Red Team (Right) -->
         <div class="team-card red-team">
           <div class="team-header">
             <div class="team-icon">
@@ -85,15 +85,15 @@
             </div>
             <div class="player-card">
               <div class="player-number">2</div>
-              <div class="player-name">اواب</div>
+              <div class="player-name">خالد</div>
             </div>
             <div class="player-card">
               <div class="player-number">3</div>
-              <div class="player-name">التجاني</div>
+              <div class="player-name">جوهر</div>
             </div>
             <div class="player-card">
               <div class="player-number">4</div>
-              <div class="player-name">حردلو</div>
+              <div class="player-name">هيثم</div>
             </div>
             <div class="player-card">
               <div class="player-number">5</div>
@@ -101,43 +101,7 @@
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">رزقه/ احمد/ عباده</div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Blue Team (Right) -->
-        <div class="team-card blue-team">
-          <div class="team-header">
-            <div class="team-icon">
-              <i class="fas fa-shield-alt"></i>
-            </div>
-            <h2 class="team-name">الفريق الأزرق</h2>
-          </div>
-          <div class="players-grid">
-            <div class="player-card">
-              <div class="player-number">1</div>
-              <div class="player-name">رياني</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">2</div>
-              <div class="player-name">خالد</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">3</div>
-              <div class="player-name">انور</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">4</div>
-              <div class="player-name">جوهر</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">5</div>
-              <div class="player-name">وادفور</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">6</div>
-              <div class="player-name">رزقه/ احمد/ عباده</div>
+              <div class="player-name">عثمان</div>
             </div>
           </div>
         </div>
@@ -153,13 +117,14 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name"></span>
+                <span class="bench-name">جرافي</span>
               </div>
               <div class="bench-player">
-                <span class="bench-name"></span>
+                <span class="bench-name">عصام</span>
               </div>
             </div>
           </div>
+
           <div class="bench-card">
             <div class="bench-header">
               <i class="fas fa-tshirt"></i>
