--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">جرافي</span>
+                <span class="bench-name"></span>
               </div>
               <div class="bench-player">
-                <span class="bench-name">عصام</span>
+                <span class="bench-name"></span>
               </div>
             </div>
           </div>
