--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <img src="sudan-ball.png" alt="Sudan Football" />
           </div>
           <div class="match-info">
-            <h1 class="match-title">Goals</h1>
+            <h1 class="match-title">Strikers</h1>
             <div class="match-details">
-              <span class="time"> 1:00 PM</span>
+              <span class="time"> 1:30 PM</span>
               <span class="date">Sun 26/10</span>
             </div>
           </div>
@@ -117,10 +117,10 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name"></span>
+                <span class="bench-name">رزقه</span>
               </div>
               <div class="bench-player">
-                <span class="bench-name"></span>
+                <span class="bench-name">وائل</span>
               </div>
             </div>
           </div>
