--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <img src="sudan-ball.png" alt="Sudan Football" />
           </div>
           <div class="match-info">
-            <h1 class="match-title">Strikers</h1>
+            <h1 class="match-title">ASV</h1>
             <div class="match-details">
-              <span class="time"> 1:30 PM</span>
-              <span class="date">Sun 26/10</span>
+              <span class="time"> 09:30 PM</span>
+              <span class="date">Wen 29/10</span>
             </div>
           </div>
         </div>
@@ -34,43 +34,7 @@
     <main class="main-content">
       <!-- Teams Section -->
       <section class="teams-section">
-        <!-- Yellow Team (Left) -->
-        <div class="team-card yellow-team">
-          <div class="team-header">
-            <div class="team-icon">
-              <i class="fas fa-shield-alt"></i>
-            </div>
-            <h2 class="team-name">الفريق الأصفر</h2>
-          </div>
-          <div class="players-grid">
-            <div class="player-card">
-              <div class="player-number">1</div>
-              <div class="player-name">رياني</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">2</div>
-              <div class="player-name">اواب</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">3</div>
-              <div class="player-name">الحردلو</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">4</div>
-              <div class="player-name">انور</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">5</div>
-              <div class="player-name">عباده</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">6</div>
-              <div class="player-name">احمد</div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Red Team (Right) -->
+        <!-- Red Team (Left) -->
         <div class="team-card red-team">
           <div class="team-header">
             <div class="team-icon">
@@ -81,27 +45,87 @@
           <div class="players-grid">
             <div class="player-card">
               <div class="player-number">1</div>
-              <div class="player-name">حسام</div>
+              <div class="player-name">عصام</div>
             </div>
             <div class="player-card">
               <div class="player-number">2</div>
-              <div class="player-name">خالد</div>
+              <div class="player-name">سنده</div>
             </div>
             <div class="player-card">
               <div class="player-number">3</div>
-              <div class="player-name">جوهر</div>
+              <div class="player-name">محمد عوض</div>
             </div>
             <div class="player-card">
               <div class="player-number">4</div>
-              <div class="player-name">هيثم</div>
+              <div class="player-name">رياني</div>
             </div>
             <div class="player-card">
               <div class="player-number">5</div>
-              <div class="player-name">سلمان</div>
+              <div class="player-name">جرافي</div>
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">عثمان</div>
+              <div class="player-name">عباده</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">7</div>
+              <div class="player-name">اواب</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">8</div>
+              <div class="player-name">مهند</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">9</div>
+              <div class="player-name">رزقه/احمد</div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Yellow Team (Right) -->
+        <div class="team-card yellow-team">
+          <div class="team-header">
+            <div class="team-icon">
+              <i class="fas fa-shield-alt"></i>
+            </div>
+            <h2 class="team-name">الفريق الأصفر</h2>
+          </div>
+          <div class="players-grid">
+            <div class="player-card">
+              <div class="player-number">1</div>
+              <div class="player-name">حردلو</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">2</div>
+              <div class="player-name">وائل</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">3</div>
+              <div class="player-name">عبدالرحمن</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">4</div>
+              <div class="player-name">ابو القاسم</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">5</div>
+              <div class="player-name">انس</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">6</div>
+              <div class="player-name">ايهاب</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">7</div>
+              <div class="player-name">ابن بطوطه</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">8</div>
+              <div class="player-name">جوهر</div>
+            </div>
+            <div class="player-card">
+              <div class="player-number">9</div>
+              <div class="player-name">رزقه/احمد</div>
             </div>
           </div>
         </div>
@@ -117,22 +141,28 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">رزقه</span>
+                <span class="bench-name">حسام</span>
               </div>
               <div class="bench-player">
-                <span class="bench-name">وائل</span>
+                <span class="bench-name">فيصل</span>
+              </div>
+              <div class="bench-player">
+                <span class="bench-name">محمود</span>
+              </div>
+              <div class="bench-player">
+                <span class="bench-name">سلمان</span>
               </div>
             </div>
           </div>
 
-          <div class="bench-card">
+          <div class="bench-card jerseys-card" onclick="openJerseysModal()">
             <div class="bench-header">
               <i class="fas fa-tshirt"></i>
               <h3>الفنايل</h3>
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">احمد بشير</span>
+                <span class="bench-name">جرافي</span>
               </div>
             </div>
           </div>
@@ -140,5 +170,109 @@
       </section>
     </main>
   </div>
+
+  <!-- Jerseys Modal -->
+  <div id="jerseysModal" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2>غسيل الفنايل</h2>
+        <span class="close" onclick="closeJerseysModal()">&times;</span>
+      </div>
+      <div class="modal-body">
+        <table class="jerseys-table">
+          <thead>
+            <tr>
+              <th>الاسم</th>
+              <th>الحالة</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>رزقه</td>
+              <td><span class="status done">✓</span></td>
+            </tr>
+            <tr>
+              <td>حسام</td>
+              <td><span class="status done">✓</span></td>
+            </tr>
+            <tr>
+              <td>وائل</td>
+              <td><span class="status done">✓</span></td>
+            </tr>
+            <tr>
+              <td>انس</td>
+              <td><span class="status done">✓</span></td>
+            </tr>
+            <tr>
+              <td>عباده</td>
+              <td><span class="status unmarked">-</span></td>
+            </tr>
+            <tr>
+              <td>عثمان</td>
+              <td><span class="status done">✓</span></td>
+            </tr>
+            <tr>
+              <td>محمد عوض</td>
+              <td><span class="status unmarked">-</span></td>
+            </tr>
+            <tr>
+              <td>رياني</td>
+              <td><span class="status unmarked">-</span></td>
+            </tr>
+            <tr>
+              <td>الحردلو</td>
+              <td><span class="status done">✓</span></td>
+            </tr>
+            <tr>
+              <td>احمد بشیر</td>
+              <td><span class="status done">✓</span></td>
+            </tr>
+            <tr class="excluded-row">
+              <td>جرافي</td>
+              <td><span class="status excluded"></span></td>
+            </tr>
+            <tr>
+              <td>الشيخ</td>
+              <td><span class="status unmarked">-</span></td>
+            </tr>
+            <tr>
+              <td>جوهر</td>
+              <td><span class="status unmarked">-</span></td>
+            </tr>
+            <tr>
+              <td>فيصل</td>
+              <td><span class="status unmarked">-</span></td>
+            </tr>
+            <tr>
+              <td>عصام</td>
+              <td><span class="status unmarked">-</span></td>
+            </tr>
+            <tr>
+              <td>سلمان</td>
+              <td><span class="status unmarked">-</span></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    function openJerseysModal() {
+      document.getElementById('jerseysModal').style.display = 'block';
+    }
+
+    function closeJerseysModal() {
+      document.getElementById('jerseysModal').style.display = 'none';
+    }
+
+    // Close modal when clicking outside of it
+    window.onclick = function(event) {
+      const modal = document.getElementById('jerseysModal');
+      if (event.target == modal) {
+        modal.style.display = 'none';
+      }
+    }
+  </script>
 </body>
 </html>
