added previuos matches

--- a/index.html
+++ b/index.html
@@ -168,6 +168,14 @@
           </div>
         </div>
       </section>
+
+      <!-- Navigation Link -->
+      <section class="navigation-section">
+        <a href="previous-matches.html" class="nav-link">
+          <i class="fas fa-history"></i>
+          <span>التمارين السابقة</span>
+        </a>
+      </section>
     </main>
   </div>
 
