style update for phone view

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
           <div class="match-info">
             <h1 class="match-title">ASV</h1>
             <div class="match-details">
-              <span class="time"> 09:30 PM</span>
-              <span class="date">Wen 29/10</span>
+              <span class="time">Wen 29/10 09:30 PM</span>
             </div>
           </div>
         </div>
