--- a/previous-matches.html
+++ b/previous-matches.html
@@ -26,7 +26,7 @@
             <img src="sudan-ball.png" alt="Sudan Football" />
           </div>
           <div class="match-info">
-            <h1 class="match-title">Previous Matches</h1>
+            <h1 class="match-title">التمارين السابقة</h1>
           </div>
         </div>
       </div>
