--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <img src="sudan-ball.png" alt="Sudan Football" />
           </div>
           <div class="match-info">
-            <h1 class="match-title">ASV</h1>
+            <h1 class="match-title">Striker</h1>
             <div class="match-details">
-              <span class="time">Wen 29/10 09:30 PM</span>
+              <span class="time">Sun 02/11 09:30 PM</span>
             </div>
           </div>
         </div>
@@ -44,39 +44,27 @@
           <div class="players-grid">
             <div class="player-card">
               <div class="player-number">1</div>
-              <div class="player-name">عصام</div>
+              <div class="player-name">جوهر</div>
             </div>
             <div class="player-card">
               <div class="player-number">2</div>
-              <div class="player-name">سنده</div>
+              <div class="player-name">حردلو</div>
             </div>
             <div class="player-card">
               <div class="player-number">3</div>
-              <div class="player-name">محمد عوض</div>
+              <div class="player-name">وائل</div>
             </div>
             <div class="player-card">
               <div class="player-number">4</div>
-              <div class="player-name">رياني</div>
+              <div class="player-name">انور</div>
             </div>
             <div class="player-card">
               <div class="player-number">5</div>
-              <div class="player-name">جرافي</div>
+              <div class="player-name">انس</div>
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">عباده</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">7</div>
-              <div class="player-name">اواب</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">8</div>
-              <div class="player-name">مهند</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">9</div>
-              <div class="player-name">رزقه/احمد</div>
+              <div class="player-name">رزقه | احمد</div>
             </div>
           </div>
         </div>
@@ -92,39 +80,27 @@
           <div class="players-grid">
             <div class="player-card">
               <div class="player-number">1</div>
-              <div class="player-name">حردلو</div>
+              <div class="player-name">سلمان</div>
             </div>
             <div class="player-card">
               <div class="player-number">2</div>
-              <div class="player-name">وائل</div>
+              <div class="player-name">عصام</div>
             </div>
             <div class="player-card">
               <div class="player-number">3</div>
-              <div class="player-name">عبدالرحمن</div>
+              <div class="player-name">رياني</div>
             </div>
             <div class="player-card">
               <div class="player-number">4</div>
-              <div class="player-name">ابو القاسم</div>
+              <div class="player-name">عباده</div>
             </div>
             <div class="player-card">
               <div class="player-number">5</div>
-              <div class="player-name">انس</div>
+              <div class="player-name">محمود</div>
             </div>
             <div class="player-card">
               <div class="player-number">6</div>
-              <div class="player-name">ايهاب</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">7</div>
-              <div class="player-name">ابن بطوطه</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">8</div>
-              <div class="player-name">جوهر</div>
-            </div>
-            <div class="player-card">
-              <div class="player-number">9</div>
-              <div class="player-name">رزقه/احمد</div>
+              <div class="player-name">رزقه | احمد</div>
             </div>
           </div>
         </div>
@@ -140,16 +116,16 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">حسام</span>
+                <span class="bench-name"></span>
               </div>
               <div class="bench-player">
-                <span class="bench-name">فيصل</span>
+                <span class="bench-name"></span>
               </div>
               <div class="bench-player">
-                <span class="bench-name">محمود</span>
+                <span class="bench-name"></span>
               </div>
               <div class="bench-player">
-                <span class="bench-name">سلمان</span>
+                <span class="bench-name"></span>
               </div>
             </div>
           </div>
@@ -161,7 +137,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">جرافي</span>
+                <span class="bench-name">عصام</span>
               </div>
             </div>
           </div>
@@ -234,9 +210,9 @@
               <td>احمد بشیر</td>
               <td><span class="status done">✓</span></td>
             </tr>
-            <tr class="excluded-row">
+            <tr>
               <td>جرافي</td>
-              <td><span class="status excluded"></span></td>
+              <td><span class="status done">✓</span></td>
             </tr>
             <tr>
               <td>الشيخ</td>
@@ -250,9 +226,9 @@
               <td>فيصل</td>
               <td><span class="status unmarked">-</span></td>
             </tr>
-            <tr>
+            <tr class="excluded-row">
               <td>عصام</td>
-              <td><span class="status unmarked">-</span></td>
+              <td><span class="status excluded"></span></td>
             </tr>
             <tr>
               <td>سلمان</td>
