--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="player-card">
               <div class="player-number">2</div>
-              <div class="player-name">حردلو</div>
+              <div class="player-name">عصام</div>
             </div>
             <div class="player-card">
               <div class="player-number">3</div>
@@ -84,7 +84,7 @@
             </div>
             <div class="player-card">
               <div class="player-number">2</div>
-              <div class="player-name">عصام</div>
+              <div class="player-name">حردلو</div>
             </div>
             <div class="player-card">
               <div class="player-number">3</div>
@@ -116,7 +116,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name"></span>
+                <span class="bench-name">الرشيد</span>
               </div>
               <div class="bench-player">
                 <span class="bench-name"></span>
