--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             <i class="fas fa-clipboard-list"></i>
             <span>لوائح القروب</span>
           </li>
+          <li class="menu-item">
+            <a href="previous-matches.html" style="display: flex; align-items: center; gap: 1rem; color: inherit; text-decoration: none; width: 100%;">
+              <i class="fas fa-history"></i>
+              <span>التمارين السابقة</span>
+            </a>
+          </li>
           <li class="menu-item" onclick="openGallery()">
             <i class="fas fa-images"></i>
             <span>الصور</span>
@@ -94,49 +100,49 @@
         </div>
         <div class="modal-body gallery-body">
           <div class="gallery-grid">
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/1.jpg')">
               <img src="gallery/1.jpg" alt="Gallery Image 1" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/2.jpg')">
               <img src="gallery/2.jpg" alt="Gallery Image 2" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/3.jpg')">
               <img src="gallery/3.jpg" alt="Gallery Image 3" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/4.jpg')">
               <img src="gallery/4.jpg" alt="Gallery Image 4" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/5.jpg')">
               <img src="gallery/5.jpg" alt="Gallery Image 5" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/6.jpg')">
               <img src="gallery/6.jpg" alt="Gallery Image 6" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/7.jpg')">
               <img src="gallery/7.jpg" alt="Gallery Image 7" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/8.jpg')">
               <img src="gallery/8.jpg" alt="Gallery Image 8" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/9.jpg')">
               <img src="gallery/9.jpg" alt="Gallery Image 9" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/10.jpg')">
               <img src="gallery/10.jpg" alt="Gallery Image 10" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/11.jpg')">
               <img src="gallery/11.jpg" alt="Gallery Image 11" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/12.jpg')">
               <img src="gallery/12.jpg" alt="Gallery Image 12" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/14.jpg')">
               <img src="gallery/14.jpg" alt="Gallery Image 14" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/15.jpg')">
               <img src="gallery/15.jpg" alt="Gallery Image 15" loading="lazy">
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" onclick="openImageLightbox('gallery/16.jpg')">
               <img src="gallery/16.jpg" alt="Gallery Image 16" loading="lazy">
             </div>
           </div>
@@ -268,14 +274,13 @@
         </div>
       </section>
 
-      <!-- Navigation Link -->
-      <section class="navigation-section">
-        <a href="previous-matches.html" class="nav-link">
-          <i class="fas fa-history"></i>
-          <span>التمارين السابقة</span>
-        </a>
-      </section>
     </main>
+  </div>
+
+  <!-- Image Lightbox -->
+  <div id="imageLightbox" class="image-lightbox" onclick="closeImageLightbox()">
+    <span class="lightbox-close" onclick="event.stopPropagation(); closeImageLightbox()">&times;</span>
+    <img id="lightboxImage" src="" alt="Gallery Image" onclick="event.stopPropagation()">
   </div>
 
   <!-- Jerseys Modal -->
@@ -409,6 +414,18 @@
       document.getElementById('galleryModal').style.display = 'none';
     }
 
+    // Image Lightbox
+    function openImageLightbox(imageSrc) {
+      const lightbox = document.getElementById('imageLightbox');
+      const lightboxImage = document.getElementById('lightboxImage');
+      lightboxImage.src = imageSrc;
+      lightbox.style.display = 'flex';
+    }
+
+    function closeImageLightbox() {
+      document.getElementById('imageLightbox').style.display = 'none';
+    }
+
     // Jerseys Modal
     function openJerseysModal() {
       document.getElementById('jerseysModal').style.display = 'block';
@@ -436,6 +453,11 @@
       }
       if (event.target == galleryModal) {
         galleryModal.style.display = 'none';
+      }
+      
+      const imageLightbox = document.getElementById('imageLightbox');
+      if (event.target == imageLightbox) {
+        imageLightbox.style.display = 'none';
       }
     }
   </script>
