--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
         </div>
         <div class="modal-body">
           <div class="announcements-content">
-            <p>سيتم إضافة الإعلانات هنا قريباً</p>
+            <p style="margin-bottom: 1rem;"><strong>🟢 تمرين الاربع: فتح التسجيل يوم الاحد الساعه ٩ مساء</strong></p>
+            <p style="margin-bottom: 1rem;"><strong>🟢 تمرين الاحد: فتح التسجيل يوم الخميس الساعه ٩ مساء</strong></p>
+            <p style="margin-bottom: 1rem;"><strong>⛔️ اي زول يسجل لي روحو ( يستثنى الضيوف والمابتكلمو عربي)</strong></p>
+            <p style="margin-bottom: 1rem;"><strong>🟢ياريت الشباب يلتزمو بالشير بعد التمرين مباشره</p>
+            <p style="margin-bottom: 1rem;"><strong>🟢اي زول فيكم ممكن يفتح التمرين في الزمن المحدد (ماف شخص محدد)</p>
           </div>
         </div>
       </div>
